# Morroc

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/morroc-agent/: Cargo.toml
crates/morroc-agent/src/: lib.rs  ontology.rs
crates/morroc-char/: Cargo.toml
crates/morroc-char/src/: lib.rs
crates/morroc-converter/: Cargo.toml
crates/morroc-converter/src/: lib.rs  libconfig.rs  main.rs  npc.rs  rathena.rs  schema.rs  yaml_db.rs
crates/morroc-core/: Cargo.toml
crates/morroc-core/src/: config.rs  error.rs  lib.rs  logging.rs  panic.rs
crates/morroc-daemon/: Cargo.toml
crates/morroc-daemon/src/: agent.rs  broker.rs  dsl.rs  lib.rs  main.rs
crates/morroc-daemon/tests/: distributed_mode.rs  distributed_startup.rs
crates/morroc-db/: Cargo.toml
crates/morroc-db/migrations/: 0001_initial.sql  0002_session.sql
crates/morroc-db/src/: lib.rs
crates/morroc-dsl/: Cargo.toml
crates/morroc-dsl/src/: lib.rs
crates/morroc-login/: Cargo.toml
crates/morroc-login/src/: lib.rs
crates/morroc-map/: Cargo.toml
crates/morroc-map/src/: combat.rs  data.rs  lib.rs  status.rs  woe.rs
crates/morroc-net/: Cargo.toml
crates/morroc-net/src/: lib.rs
crates/morroc-packets/: Cargo.toml  build.rs
crates/morroc-packets/src/: char.rs  lengths.rs  lib.rs  login.rs  map.rs
data/custom/: README.md
scripts/: hello.ro
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
ui/: app.js  index.html  styles.css
