[package]
name = "morroc"
version = "0.1.0"
description = "Morroc - High-performance Ragnarok Online server emulator"
authors = ["Morroc Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Cnkore007/Morroc"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "morroc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "morroc"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.3", features = [] }
clap = { version = "4.5", features = ["derive"] }
morroc-core = { path = "../crates/morroc-core" }
morroc-daemon = { path = "../crates/morroc-daemon" }
morroc-agent = { path = "../crates/morroc-agent" }
tokio = { version = "1.43", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
sysinfo = "0.33"
