[package]
name = "morroc-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1.0"
tokio = { version = "1.43", features = ["full"] }
tracing = "0.1"
axum = "0.7"

[dev-dependencies]
tokio-test = "0.4"
