[package]
name = "morroc-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0"
backtrace = "0.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.43", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std"] }

[dev-dependencies]
tokio-test = "0.4"
