[package]
name = "morroc-map"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
morroc-net = { path = "../morroc-net" }
morroc-packets = { path = "../morroc-packets" }
morroc-db = { path = "../morroc-db" }
morroc-converter = { path = "../morroc-converter" }
anyhow = "1.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
